welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: reassignment to val
    droite = false
           ^ZigZag:23: error: reassignment to val
    droite = true
           ^